--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -20,7 +20,6 @@
         android:id="@+id/timenote_username"
         android:layout_marginStart="8dp"
         tools:text="Samuel"
-        android:textStyle="bold"
         android:textSize="14sp"
         android:layout_marginTop="16dp"
         android:textColor="@color/colorText"
@@ -34,6 +33,7 @@
         tools:text="34 Ohio Street"
         android:textColor="@color/colorText"
         android:textSize="12sp"
+        android:fontFamily="sans-serif-light"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toBottomOf="@id/timenote_username"
@@ -69,6 +69,7 @@
         android:id="@+id/timenote_title"
         android:textSize="18sp"
         android:text="BEACH PARTY"
+        android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:textAllCaps="true"
         android:layout_marginStart="16dp"
@@ -86,6 +87,7 @@
         android:layout_marginStart="104dp"
         android:id="@+id/timenote_year"
         android:text="2020"
+        android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
@@ -99,6 +101,7 @@
         android:background="@drawable/custom"
         android:layout_marginBottom="8dp"
         android:id="@+id/separator_1"
+        android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
         app:layout_constraintStart_toEndOf="@id/timenote_year"
         app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
@@ -108,6 +111,7 @@
     <TextView
         android:shadowDy="1"
         android:shadowDx="1"
+        android:fontFamily="sans-serif-light"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
         android:gravity="center"
@@ -125,6 +129,7 @@
     <TextView
         android:background="@drawable/custom"
         android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif-light"
         android:id="@+id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/timenote_time"
         app:layout_constraintStart_toEndOf="@id/timenote_day_month"
@@ -140,6 +145,7 @@
         android:layout_marginEnd="104dp"
         android:id="@+id/timenote_time"
         android:text="11Aug.\n12:30"
+        android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
