--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:id="@+id/search_explore_category"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
