--- a/app/src/main/res/layout/adapter_suggestion_card.xml
+++ b/app/src/main/res/layout/adapter_suggestion_card.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/suggestion_title_category"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
