--- a/app/src/main/res/layout/autocomplete_search_address.xml
+++ b/app/src/main/res/layout/autocomplete_search_address.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <AutoCompleteTextView
+        android:fontFamily="sans-serif-light"
         android:padding="16dp"
         android:hint="@string/action_search"
         android:id="@+id/autocompleteTextview_Address"
