--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -19,6 +19,7 @@
                 android:text="@string/new_timenote" />
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/create_timenote_next_btn"
                 style="@style/AppTheme.Toolbar.TextLeft"
                 android:text="@string/next" />
@@ -64,6 +65,7 @@
                     android:textSize="14sp"
                     android:textAllCaps="true"
                     android:drawablePadding="8dp"
+                    android:fontFamily="sans-serif-light"
                     android:drawableBottom="@drawable/ic_new_timenote_add_iamge"
                     android:textColor="@color/colorText"
                     android:text="@string/take_add_a_picture"
@@ -103,6 +105,7 @@
                 android:id="@+id/choose_color_label"
                 android:layout_marginTop="12dp"
                 android:textAllCaps="true"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/choose_a_color"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
@@ -204,6 +207,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/when_label"
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_new_timenote_when"
@@ -216,6 +220,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/from_label"
                         android:layout_marginTop="8dp"
                         android:text="@string/from"
@@ -227,6 +232,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/to_label"
                         android:layout_marginTop="8dp"
                         android:text="@string/to"
@@ -238,6 +244,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_from"
                         android:layout_marginTop="8dp"
                         tools:text="14 Janvier 2020"
@@ -249,6 +256,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_to"
                         android:layout_marginTop="8dp"
                         tools:text="15 Janvier 2020"
@@ -282,6 +290,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_where_btn"
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_profile_from"
@@ -315,6 +324,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_share_with_btn"
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_new_timenote_share_with"
@@ -348,6 +358,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_category_label"
                         android:drawablePadding="8dp"
                         android:textColor="@color/colorText"
@@ -359,6 +370,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_category"
                         android:drawablePadding="8dp"
                         android:textColor="@color/colorTextSecondary"
@@ -393,6 +405,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_title_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
