--- a/app/src/main/res/layout/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout/fragment_detailed_fragment.xml
@@ -69,6 +69,7 @@
         android:layout_height="250dp"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
@@ -86,6 +87,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
@@ -103,6 +105,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:background="@drawable/custom"
         android:layout_marginBottom="8dp"
         android:id="@+id/separator_1"
@@ -113,6 +116,7 @@
         android:layout_height="48dp"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
@@ -130,6 +134,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:background="@drawable/custom"
         android:layout_marginBottom="8dp"
         android:id="@+id/separator_2"
@@ -140,6 +145,7 @@
         android:layout_height="48dp"/>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
