--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -19,11 +19,13 @@
                 android:text="@string/filters" />
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_done_btn"
                 style="@style/AppTheme.Toolbar.TextLeft"
                 android:text="@string/done" />
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_clear_btn"
                 style="@style/AppTheme.Toolbar.TextRight"
                 android:text="@string/clear"
@@ -53,6 +55,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
@@ -63,6 +66,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_category_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorTextSecondary"
@@ -95,6 +99,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
@@ -105,6 +110,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_from_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorTextSecondary"
@@ -137,6 +143,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
