--- a/app/src/main/res/layout/fragment_notification_manager.xml
+++ b/app/src/main/res/layout/fragment_notification_manager.xml
@@ -23,6 +23,7 @@
     </LinearLayout>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:layout_marginTop="8dp"
         android:textColor="@color/colorText"
         android:textSize="15sp"
