--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -33,6 +33,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
@@ -61,6 +62,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:layout_marginTop="12dp"
                 android:layout_marginHorizontal="16dp"
                 android:textSize="14sp"
@@ -73,6 +75,7 @@
                 android:layout_height="wrap_content"/>
 
             <EditText
+                android:fontFamily="sans-serif-light"
                 android:backgroundTint="@color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Email"
@@ -84,6 +87,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/signup_password_label"
                 android:textSize="14sp"
                 android:textColor="@color/white"
@@ -96,6 +100,7 @@
                 android:layout_height="wrap_content"/>
 
             <EditText
+                android:fontFamily="sans-serif-light"
                 android:backgroundTint="@color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Password"
@@ -107,6 +112,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:fontFamily="sans-serif-light"
                 android:layout_marginHorizontal="16dp"
                 android:text="Forgotten password ?"
                 android:layout_marginTop="4dp"
@@ -167,6 +173,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:fontFamily="sans-serif-light"
         android:id="@+id/signup_as_guest"
         android:shadowDy="1"
         android:shadowDx="1"
