--- a/app/src/main/res/layout/item_profile_calendar.xml
+++ b/app/src/main/res/layout/item_profile_calendar.xml
@@ -30,6 +30,7 @@
 
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/profile_calendar_item_name_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,6 +44,7 @@
             tools:text="beach Volley" />
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/profile_calendar_item_address_event"
             android:layout_marginStart="8dp"
             tools:text="18 avenue de la Goulardi, Paris"
