--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -36,6 +36,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/profile_item_name_event"
             android:layout_marginStart="8dp"
             android:textSize="16sp"
@@ -48,6 +49,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/profile_item_address_event"
             android:layout_marginStart="8dp"
             tools:text="18 avenue de la Goulardi, Paris"
@@ -68,6 +70,7 @@
             android:layout_height="24dp"/>
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:gravity="center"
             app:layout_constraintStart_toEndOf="@id/profile_item_pic_profile_imageview"
             android:textSize="12sp"
@@ -80,6 +83,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:fontFamily="sans-serif-light"
             android:id="@+id/profile_item_date_event"
             tools:text="Dans 12 jours"
             android:textColor="@color/colorText"
