--- a/app/src/main/res/layout/item_search_explore.xml
+++ b/app/src/main/res/layout/item_search_explore.xml
@@ -14,6 +14,7 @@ xmlns:tools="http://schemas.android.com/tools">
     android:layout_marginTop="8dp"
     android:textSize="15sp"
     tools:text="Football"
+    android:fontFamily="sans-serif-light"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
 
