--- a/app/src/main/res/layout/item_search_place.xml
+++ b/app/src/main/res/layout/item_search_place.xml
@@ -5,6 +5,7 @@
     android:textColor="@color/black"
     android:textSize="16sp"
     android:padding="16dp"
+    android:fontFamily="sans-serif-light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
