--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -27,6 +27,7 @@
 
         <TextView
             android:shadowDy="1"
+            android:fontFamily="sans-serif-light"
             android:shadowDx="1"
             android:shadowRadius="1.5"
             android:shadowColor="@android:color/black"
@@ -37,7 +38,7 @@
             android:layout_marginStart="8dp"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:textSize="14sp"
+            android:textSize="15sp"
             tools:text="MARSEILLE - PA"
             android:breakStrategy="simple"
             android:maxLines="1"
@@ -47,21 +48,23 @@
         <ImageView
             android:src="@drawable/ic_linkedin"
             android:id="@+id/timenote_recent_pic_user_imageview"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/timenote_recent_title"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/timenote_recent_title"
             android:layout_width="18dp"
             android:layout_height="18dp"/>
 
         <TextView
+            android:visibility="gone"
             android:shadowDy="1"
+            android:fontFamily="sans-serif-light"
             android:shadowDx="1"
             android:shadowRadius="1.5"
             android:shadowColor="@android:color/black"
             android:id="@+id/timenote_recent_username"
             android:layout_marginStart="8dp"
             tools:text="Samuel"
-            android:textSize="12sp"
+            android:textSize="13sp"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/timenote_recent_pic_user_imageview"
             app:layout_constraintTop_toBottomOf="@id/timenote_recent_title"
@@ -70,6 +73,7 @@
 
         <TextView
             android:shadowDy="1"
+            android:fontFamily="sans-serif-light"
             android:shadowDx="1"
             android:shadowRadius="1.5"
             android:shadowColor="@android:color/black"
@@ -78,7 +82,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textColor="@android:color/white"
             tools:text="In 12 days"
             android:layout_width="wrap_content"
