--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -79,15 +79,36 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-                <ImageView
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="12dp"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
-                    android:id="@+id/create_timenote_pic"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:scaleType="centerCrop"
-                    android:layout_width="350dp"
-                    android:layout_height="150dp"/>
+                    android:id="@+id/pic_cl"
+                    android:layout_marginBottom="12dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:visibility="visible"
+                        android:id="@+id/vp_pic"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:scaleType="centerCrop"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"/>
+
+                    <me.relex.circleindicator.CircleIndicator3
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:id="@+id/indicator"
+                        android:layout_width="0dp"
+                        android:layout_height="48dp"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
                 <TextView
                     android:layout_gravity="center"
@@ -96,7 +117,6 @@
                     android:background="#60000000"
                     android:layout_width="200dp"
                     android:layout_height="0.1dp"/>
-
             </LinearLayout>
 
 
@@ -390,14 +410,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginBottom="24dp"
                 android:layout_marginTop="12dp"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/category_cardview"
-                fancy:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/category_cardview">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -412,6 +430,42 @@
                         android:drawableStart="@drawable/ic_profile_name"
                         android:drawablePadding="8dp"
                         android:text="@string/title"
+                        android:textColor="@color/colorText"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:visibility="invisible"
+                android:id="@+id/desc_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginBottom="24dp"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_cardview"
+                fancy:layout_constraintBottom_toBottomOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/create_timenote_desc_btn"
+                        android:fontFamily="sans-serif-light"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_a_description"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
