--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -240,6 +240,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/from_label"
                         android:layout_marginTop="8dp"
@@ -252,6 +253,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/to_label"
                         android:layout_marginTop="8dp"
@@ -264,6 +266,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_from"
                         android:layout_marginTop="8dp"
@@ -276,6 +279,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
+                        android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_to"
                         android:layout_marginTop="8dp"
@@ -284,6 +288,19 @@
                         android:textSize="14sp"
                         app:layout_constraintTop_toBottomOf="@id/create_timenote_from"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:fontFamily="sans-serif-light"
+                        android:visibility="gone"
+                        android:id="@+id/create_timenote_fixed_date"
+                        android:textSize="14sp"
+                        android:textColor="@color/colorText"
+                        tools:text="27, jun 2020"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
