--- a/app/src/main/res/layout/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout/fragment_preview_timenote_created.xml
@@ -30,15 +30,23 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:background="@android:color/white"
-        android:id="@+id/preview_created_timenote_pic_imageview"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/preview_created_timenote_vp"
         app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_ll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="250dp"/>
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:layout_marginBottom="8dp"
+        app:layout_constraintEnd_toEndOf="@id/separator_2"
+        app:layout_constraintStart_toStartOf="@id/separator_1"
+        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
+        android:id="@+id/preview_created_timenote_indicator"
+        android:layout_width="0dp"
+        android:layout_height="12dp"/>
 
     <TextView
         android:paddingHorizontal="8dp"
@@ -54,7 +62,7 @@
         android:textAllCaps="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/preview_created_timenote_vp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -73,7 +81,7 @@
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/separator_1"
+        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -83,12 +91,12 @@
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
+        android:layout_marginBottom="4dp"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="8dp"
         android:id="@+id/separator_1"
         app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_day_month"
         app:layout_constraintStart_toEndOf="@id/preview_created_timenote_year"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
         android:layout_width="2dp"
         android:layout_height="48dp"/>
 
@@ -116,12 +124,12 @@
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
+        android:layout_marginBottom="4dp"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="8dp"
         android:id="@+id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_time"
         app:layout_constraintStart_toEndOf="@id/preview_created_timenote_day_month"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintBottom_toTopOf="@id/preview_created_timenote_indicator"
         android:layout_width="2dp"
         android:layout_height="48dp"/>
 
@@ -149,7 +157,7 @@
         android:drawablePadding="8dp"
         android:drawableStart="@drawable/ic_profile_from"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/colorText"
