--- a/app/src/main/res/layout/item_pref_filter_chip.xml
+++ b/app/src/main/res/layout/item_pref_filter_chip.xml
@@ -6,7 +6,7 @@
     tools:text="Avec Alarme"
     android:layout_margin="4dp"
     app:mcv_backgroundColor="@color/white"
-    app:mcv_textColor="@color/black"
+    app:mcv_textColor="@android:color/black"
     app:mcv_selectedTextColor="@color/colorPrimary"
     app:mcv_selectedBackgroundColor="@android:color/white"
     app:mcv_strokeColor="@android:color/darker_gray"
