--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -34,12 +34,12 @@
     <mehdi.sakout.fancybuttons.FancyButton
         fancy:fb_defaultColor="@android:color/white"
         fancy:fb_borderWidth="1dp"
-        fancy:fb_borderColor="@color/colorPrimary"
+        fancy:fb_borderColor="@color/colorAccentCustom"
         fancy:fb_radius="5dp"
         fancy:fb_text="@string/follow"
         android:paddingVertical="6dp"
         android:paddingHorizontal="24dp"
-        fancy:fb_textColor="@color/colorPrimary"
+        fancy:fb_textColor="@color/colorAccentCustom"
         android:gravity="center"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
