--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     android:padding="8dp"
-    android:layout_marginEnd="-10dp"
+    android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:background="@android:color/white"
@@ -53,10 +53,17 @@
             android:id="@+id/profile_item_address_event"
             android:layout_marginStart="8dp"
             tools:text="18 avenue de la Goulardi, Paris"
-            android:textColor="@color/colorTextThirdly"
+            android:textColor="@android:color/black"
             android:textSize="13sp"
             app:layout_constraintTop_toBottomOf="@id/profile_item_name_event"
             app:layout_constraintStart_toEndOf="@id/item_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:src="@drawable/ic_more_vert_black_24dp"
+            app:layout_constraintTop_toTopOf="@id/profile_item_name_event"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -88,7 +95,7 @@
             tools:text="Dans 12 jours"
             android:textColor="@color/colorText"
             android:textSize="14sp"
-            android:layout_marginEnd="18dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
