--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,12 @@
 <resources>
     <color name="colorPrimary">#5A599D</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#63BFD2</color>
     <color name="colorText">#000000</color>
     <color name="colorTextSecondary">#5A599D</color>
     <color name="colorTextThirdly">#4A90E2</color>
     <color name="colorBackgroundForward">#103700B3</color>
     <color name="colorBackgroundBackward">#10EC407A</color>
+    <color name="colorAccentCustom">#63BFD2</color>
 
 </resources>
